<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PdfViewActivity!</string>
    <string name="app_name">dlpfile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name_title">账号：</string>
    <string name="title">登   录</string>
    <string name="title_2">德邦DLP附件解密</string>
    <string name="call_back">反  馈</string>
    <string name="remember_password">记住密码</string>
    <string name="title2">德邦DLP移动解密</string>
    <string name="callback_button">意见反馈</string>
    <string name="mess1">德邦DLP附件解密APP</string>
    <string name="mess2">V1.0</string>
    <string name="mess3">德邦物流信息技术中心平台系统开发部</string>
    <string name="mess4">Copyright © 2013 德邦物流股份有限公司. All rights reserved.</string>
    <string name="file_title">文件名</string>
    <string name="newfile_title">文件名</string>
    <string name="message_inputTitle">请输入OA用户名</string>
    <string name="message_inputFile">请输入文件名</string>
    <string name="pass_title">密码：</string>
    <string name="message_inputPass">请输入密码</string>
    <string name="message_login">用户登陆</string>
    <string name="registLogin_login">用户注册</string>
    <string name="pdfReader">浏览器阅读</string>

</resources>